infrastructure/home/gateways/2nd-shared-gateway.yml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: 2nd-shared-gateway
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 80
    hostname: "*.kube2.ruitenbeek.dev"
    name: http
